cloudFormation/02.ASG_LB.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Simple Application with ALB and Auto Scaling Group

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC where the resources will be deployed

  EC2Subnets:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Subnets where the EC2 will be deployed
  
  LBSubnets:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Subnets where the ALB will be deployed

  AmiImageId:
    Type: AWS::EC2::Image::Id
    Default: ami-0440d3b780d96b29d
    Description: AMI Image ID for the EC2 instances

  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      # Add more instance types as needed
    Description: EC2 instance type

Resources:
  SSMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: SSMManagedInstanceCore
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ssm:DescribeAssociation
                  - ssm:GetDeployablePatchSnapshotForInstance
                  - ssm:GetDocument
                  - ssm:DescribeDocument
                  - ssm:GetManifest
                  - ssm:GetParameter
                  - ssm:GetParameters
                  - ssm:ListAssociations
                  - ssm:ListInstanceAssociations
                  - ssm:PutInventory
                  - ssm:PutComplianceItems
                  - ssm:PutConfigurePackageResult
                  - ssm:UpdateAssociationStatus
                  - ssm:UpdateInstanceAssociationStatus
                  - ssm:UpdateInstanceInformation
                  - ssm:ListInstanceAssociations
                  - ssm:DescribeInstanceProperties
                  - ssm:DeleteInventory
                  - ec2messages:AcknowledgeMessage
                  - ec2messages:DeleteMessage
                  - ec2messages:FailMessage
                  - ec2messages:GetEndpoint
                  - ec2messages:GetMessages
                  - ec2messages:SendReply
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - logs:CreateLogGroup
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                Resource: '*'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - Ref: SSMRole

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: MySecurityGroup1
      GroupDescription: Security group for the EC2 instances
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0 # Allow access from anywhere for demo purposes
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 

  MyLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref AmiImageId
      InstanceType: !Ref InstanceType
      IamInstanceProfile: !Ref InstanceProfile
      SecurityGroups:
        - Ref: MySecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sed -i 's/^PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
          service sshd restart
          useradd arpjoker
          echo 'arpjoker:arpjoker' | chpasswd
          usermod -aG wheel arpjoker
          echo 'arpjoker ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/arpjoker
          chmod 0440 /etc/sudoers.d/arpjoker

          yum update -y
          yum install -y nginx
          sed -i '/listen/s/^/#/' /etc/nginx/nginx.conf
          echo "server {
          listen 80;
          location / {
            # Use the first IP in the X-Forwarded-For header
            set \$client_ip \$http_x_forwarded_for;
        
            # If the X-Forwarded-For header is not set, use the remote address of the connection
            if (\$client_ip = '') {
                set \$client_ip \$remote_addr;
            }

          return 200 \$client_ip;
          add_header Content-Type text/plain;
          }
          }" > /etc/nginx/conf.d/ip.conf
          service nginx restart

  MyAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchConfigurationName: !Ref MyLaunchConfig
      MinSize: 2 # Minimum number of instances
      MaxSize: 5 # Maximum number of instances
      DesiredCapacity: 2 # Initial desired capacity
      VPCZoneIdentifier: !Ref EC2Subnets
      TargetGroupARNs:
        - !Ref MyTargetGroup
      Tags:
        - Key: Name
          Value: MyAutoScalingGroup
          PropagateAtLaunch: true

  MyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: MyTargetGroup
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VpcId
      TargetType: instance
      HealthCheckEnabled: true
      HealthCheckProtocol: HTTP
      HealthCheckPort: 80
      HealthCheckPath: /
      Matcher:
        HttpCode: '200'

  MyListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref MyTargetGroup
      LoadBalancerArn: !Ref MyLoadBalancer
      Port: 80
      Protocol: HTTP

  MyLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: MyLoadBalancer
      Subnets: !Ref LBSubnets
      SecurityGroups:
        - Ref: MySecurityGroup
      Scheme: internet-facing
      Tags:
        - Key: Name
          Value: MyLoadBalancer

Outputs:
  LoadBalancerDNS:
    Description: DNS name of the load balancer
    Value: !GetAtt MyLoadBalancer.DNSName
